--- a/conFusion/Bootstrap4/conFusion/index.html
+++ b/conFusion/Bootstrap4/conFusion/index.html
@@ -154,12 +154,12 @@
                     <dt class="col-12 col-sm-2">Date and Time</dt>
                     <div class="form-check-inline">
                     <label class="form-check-label">
-                        <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                        <input type="date" class="form-control" id="date" name="date" placeholder="Date">
                         </label>
                     </div>
                     <div class="form-check-inline">
                         <label class="form-check-label">
-                            <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                            <input type="time" class="form-control" id="time" name="time" placeholder="Time">
                             </label>
                     </div>
                 </dl>
